[workspace]
resolver = "2"
members = [
  "publisher_sdk/rust",
  "sdk/rust/protocol",
  "sdk/rust/client",
  "contracts/solana/programs/pyth-lazer-solana-contract",
]

# TODO: only for solana programs
[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

# These patches remove upper dependency version limitations,
# allowing successful dependency resolution in the workspace.
[patch.crates-io]
curve25519-dalek = { git = "https://github.com/Riateche/curve25519-dalek.git", branch = "3.2.1-patch" }
aes-gcm-siv = { git = "https://github.com/Riateche/AEADs.git", branch = "aes-gcm-siv-v0.10.3-patch" }
