[package]
name = "pyth-xc-tool"
authors = ["Pyth Network Contributors"]
description = "The cross-chain priest for the Pyth oracle (it knows all the rituals)"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = {version = "4.0", features = ["derive", "cargo"]}
ethers = {version = "1.0.0"}
shell-words = "1.1.0"

[build-dependencies]
# EVM codegen
ethers = {version = "1.0.0", features = ["ethers-solc"]}
serde_json = "1.0.87"
