[package]
name = "binance-recorder"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
axum = { version = "0.6.20", features = ["json"] }
binance-sdk = { version = "56.0.0", default-features = false, features = ["derivatives_trading_usds_futures", "rustls-tls"] }
chrono = { version = "0.4.38", features = ["clock", "serde"] }
clap = { version = "4.5.38", features = ["derive"] }
clickhouse = { version = "0.15", default-features = false, features = ["rustls-tls", "chrono"] }
config = { version = "0.14.1", default-features = false, features = ["yaml"] }
derivative = "2.2.0"
futures = "0.3.31"
prometheus = "0.13.4"
reqwest = { version = "0.11.22", default-features = false, features = ["json", "rustls-tls"] }
rust_decimal = { version = "1.37.2", default-features = false, features = ["serde", "std"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_yaml = "0.9.34"
thiserror = "1.0.61"
tokio = { version = "1.33.0", features = ["macros", "rt-multi-thread", "signal", "sync", "time"] }
tokio-util = "0.7.14"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

[workspace]
