[package]
name = "delayed-price-pusher"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy = { version = "0.3.5", features = ["full"] }
anyhow = "1.0.89"
backoff = { version = "0.4.0", features = ["tokio"] }
bytes = "1.7.2"
env_logger = "0.11.5"
futures = "0.3.30"
hex = "0.4.3"
humantime-serde = "1.1.1"
log = "0.4.22"
reqwest = { version = "0.12.7", features = ["json", "stream"] }
reqwest-eventsource = "0.6.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["full"] }
tokio-stream = { version = "0.1.16", features = ["time"] }
url = { version = "2.5.2", features = ["serde"] }
