[project]
name = "hip-3-pusher"
version = "0.1.4"
description = "Hyperliquid HIP-3 market oracle pusher"
readme = "README.md"
requires-python = "==3.13.*"
dependencies = [
    "boto3~=1.40.38",
    "cryptography~=46.0.1",
    "hyperliquid-python-sdk~=0.19.0",
    "loguru~=0.7.3",
    "opentelemetry-exporter-prometheus~=0.58b0",
    "opentelemetry-sdk~=1.37.0",
    "prometheus-client~=0.23.1",
    "setuptools~=80.9",
    "tenacity~=9.1.2",
    "websockets~=15.0.1",
    "wheel~=0.45.1",
]

[build-system]
requires = ["setuptools~=80.9", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "pytest~=8.4.2",
]
