[package]
name = "hyperliquid-recorder"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.75"
axum = { version = "0.6.20", features = ["json"] }
bincode = { version = "2.0.1", features = ["serde"] }
chrono = { version = "0.4.38", features = ["clock"] }
clap = { version = "4.5.38", features = ["derive"] }
config = { version = "0.14.1", default-features = false, features = ["yaml"] }
futures = "0.3.31"
futures-util = "0.3.32"
prometheus = "0.13.4"
prost = "0.12.6"
pyth-lazer-protocol = "0.40.0"
reqwest = { version = "0.11.22", default-features = false, features = ["json", "rustls-tls"] }
rust_decimal = { version = "=1.37.1", default-features = false, features = ["serde", "std"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_yaml = "0.9.34"
thiserror = "1.0.61"
tokio = { version = "1.33.0", features = ["macros", "rt-multi-thread", "signal", "sync", "time"] }
tokio-stream = "0.1.17"
tokio-tungstenite = { version = "0.29.0", features = ["url"] }
tokio-util = "0.7.14"
tonic = { version = "0.11.0", features = ["tls", "tls-roots"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
url = "2.5.8"

[build-dependencies]
tonic-build = "0.11.0"

[workspace]
