[package]
name = "ondo-recorder"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
axum = { version = "0.6.20", features = ["json"] }
chrono = { version = "0.4.38", features = ["clock"] }
clap = { version = "4.5.38", features = ["derive"] }
clickhouse = { version = "0.12.2", default-features = false, features = ["rustls-tls", "lz4"] }
config = { version = "0.14.1", default-features = false, features = ["yaml"] }
futures = "0.3.31"
prometheus = "0.13.4"
reqwest = { version = "0.11.22", default-features = false, features = ["json", "rustls-tls"] }
rust_decimal = { version = "=1.37.1", default-features = false, features = ["serde", "std"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_yaml = "0.9.34"
thiserror = "1.0.61"
tokio = { version = "1.33.0", features = ["macros", "rt-multi-thread", "signal", "sync", "time"] }
tokio-util = "0.7.14"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

[workspace]
