[package]
name = "pyth-lazer-agent"
version = "0.1.0"
edition = "2024"

[dependencies]
pyth-lazer-publisher-sdk = "0.1.5"
pyth-lazer-protocol = "0.7.2"

anyhow = "1.0.98"
backoff = "0.4.0"
base64 = "0.22.1"
bincode = { version = "2.0.1", features = ["serde"] }
clap = { version = "4.5.32", features = ["derive"] }
config = "0.15.11"
derivative = "2.2.0"
ed25519-dalek = { version = "2.1.1", features = ["rand_core"] }
futures = "0.3.31"
futures-util = "0.3.31"
http = "1.3.1"
http-body-util = "0.1.3"
humantime-serde = "1.1.1"
hyper = { version = "1.6.0", features = ["http1", "server"] }
hyper-util = { version = "0.1.10", features = ["tokio"] }
protobuf = "3.7.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
soketto = { version = "0.8.1", features = ["http"] }
solana-keypair = "2.2.1"
tokio = { version = "1.44.1", features = ["full"] }
tokio-tungstenite = { version = "0.26.2", features = ["native-tls", "url"] }
tokio-util = { version = "0.7.14", features = ["compat"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json"] }
url = { version = "2.5.4", features = ["serde"] }

[dev-dependencies]
tempfile = "3.20.0"
