[package]
name = "quorum"
version = "0.1.2"
edition = "2021"

[dependencies]
anyhow = "1.0.98"
axum = { version = "0.8.4", features = ["ws"] }
borsh = "1.5.7"
clap = { version = "4.5.39", features = ["derive", "env", "cargo"] }
hex = { version = "0.4.3", features = ["serde"] }
lazy_static = "1.5.0"
serde = "1.0.219"
solana-client = "2.2.7"
solana-sdk = "2.2.2"
tokio = { version = "1.45.1", features = ["rt-multi-thread", "signal"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json"] }
wormhole-vaas-serde = "0.1.0"
secp256k1 = { version = "0.31.0", features = ["rand", "recovery"] }
sha3 = "0.10.8"
time = "0.3.41"
serde_json = "1.0.140"
futures = "0.3.31"
serde_wormhole = "0.1.0"
