[package]
name = "pythnet-sdk"
version = "1.13.6"
description = "Pyth Runtime for Solana"
authors = ["Pyth Data Association"]
repository = "https://github.com/pyth-network/pythnet"
edition = "2021"

[lib]
crate-type = ["lib"]
name = "pythnet_sdk"

[dependencies]
bincode = "1.3.1"
borsh = "0.9.1"
bytemuck = { version = "1.11.0", features = ["derive"] }
fast-math = "0.1"
hex = { version = "0.4.3", features = ["serde"] }
serde = { version = "1.0.144", features = ["derive"] }
#serde_wormhole = { git = "https://github.com/wormhole-foundation/wormhole" }
sha3 = "0.10.4"
slow_primes = "0.1.14"
wormhole-sdk = "0.1.0"

[dev-dependencies]
base64 = "0.21.0"
rand = "0.7.0"
serde_json = "1.0.96"
solana-client = "=1.13.6"
solana-sdk = "=1.13.6"
proptest = "1.1.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[build-dependencies]
rustc_version = "0.4"

[patch.crates-io]
#serde_wormhole = { git = "https://github.com/wormhole-foundation/wormhole" }
wormhole-sdk = { path = "../wormhole/sdk/rust/core" }
